Added footer to index.html file

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
         
         </div>
 
+        <footer style=background-color:lightblue>
+            <h3 style=text-align:center>This is a Footer!</h3>
+        </footer>
 
 
 
