Updated the index.html and style.css file with updated text and create features

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
                     <p class="text-start fs-1 fw-bold">Joshua Betrand</p>
                     <p class="text-start">Senior Developer/Worship Drummer/Entrepreneur</p>
                     <hr>
-                    <p class="text-start">Hi, I'm Josh and I'm new to the coding space and this is my first year. I am a fast learner and a hard worker.</p>
                     <p class="text-start">
-
+                        Hi, I'm Josh and I'm new to the coding space and this is my first year. I am a fast learner and a hard worker. I am very excited to tap into this big world of Development!
+                    </p>
+                    <p class="text-start">
+                        I'm at worship drummer at my church and in my community which is a passion of mine. I also have a few different businesses that I run which I really enjoy as well. 
                     </p>
                 </div>
                 <div class="col-sm col-md col-lg shadow-sm p-2 mb-3">
@@ -57,16 +59,16 @@
                 </div>
                 <div class="col">
                     <p class="text-center fs-2 fw-bold">Soft Skills</p>
-                    <p class="text-center border m-0 p-1 hover">HTML, CSS, JS</p>
-                    <p class="text-center border m-0 p-1 hover">HTML, CSS, JS</p>
-                    <p class="text-center border m-0 p-1 hover">HTML, CSS, JS</p>
-                    <p class="text-center border m-0 p-1 hover">AJAX and jQuery</p>
+                    <p class="text-center border m-0 p-1 hover">Hard Worker</p>
+                    <p class="text-center border m-0 p-1 hover">Fast Learner</p>
+                    <p class="text-center border m-0 p-1 hover">Work Ethic</p>
+                    <p class="text-center border m-0 p-1 hover">Great Communicator</p>
                 </div>
                 <div class="col">
                     <p class="text-center fs-2 fw-bold">Hobbies</p>
-                    <p class="text-center border m-0 p-1 hover">HTML, CSS, JS</p>
-                    <p class="text-center border m-0 p-1 hover">HTML, CSS, JS</p>
-                    <p class="text-center border m-0 p-1 hover">AJAX and jQuery</p> 
+                    <p class="text-center border m-0 p-1 hover">Drums/Music Production</p>
+                    <p class="text-center border m-0 p-1 hover">Basketball</p>
+                    <p class="text-center border m-0 p-1 hover">Day Trading</p> 
                 </div>
             </div>
         </div>
@@ -77,16 +79,13 @@
         </div>
 
 
-        <div class="container">
+        <div class="footer-container">
             <div class="grid-1">
-               <footer> <a href="#" class="link-primary">Github</a></Footer>
+                <footer> 
+                    <a href="#" class="link-primary">Github</a>
+                </Footer>
             </div>
         </div>
-
-        <!-- <footer style=background-color:azure>
-            <h3 style=text-align:start>This is a Footer!</h3>
-        </footer> -->
-
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <script src="script.js"></script> 
