Added github link to footer link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="footer-container">
             <div class="grid-1">
                 <footer> 
-                    <a href="#" class="link-primary">Github</a>
+                    <a href="https://github.com/Jbetrand10/final-project.git" class="link-primary">Github</a>
                 </Footer>
             </div>
         </div>
