--- a/index.html
+++ b/index.html
@@ -73,19 +73,15 @@
             </div>
         </div>
 
-        <div id="myDiv" class="container">
-           
-            
+   
+        <div id="advice">
+
         </div>
 
 
-        <div class="footer-container">
-            <div class="grid-1">
-                <footer> 
-                    <a href="https://github.com/Jbetrand10/final-project.git" class="link-primary">Github</a>
-                </Footer>
-            </div>
-        </div>
+        <footer > 
+            <a href="https://github.com/Jbetrand10/final-project.git" class="link-primary">Github</a>
+        </Footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <script src="script.js"></script> 
